# internal/types/eth.go
@@ -1,0 +1,6 @@
+package types
+
+type BlockNumber struct {
+	ChainName string `json:"chain_name"`
+	Number    string `json:"number"`
+}
